--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
 title: Weather Pal App
+description: An awesome app to get awesome weather updates from awesome cities 🕶
